# git-cleaner

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  IMPLEMENTATION_PLAN.md  OVERVIEW.md
docs/release/: v1.0.0.md
src/: cleaner.rs  cli.rs  config.rs  git.rs  init.rs  main.rs  ui.rs
tasks/: todo.md
tests/: branch_detection.rs  config_filtering.rs  error_paths.rs  init_idempotent.rs  interactive_delete.rs  remote_state.rs
