[package]
name = "git-cleaner"
version = "0.1.0"
edition = "2021"
description = "Interactively clean up local git branches already merged into base branches."
license = "MIT OR Apache-2.0"

[[bin]]
name = "git-cleaner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
git2 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
